allow higher resolution

--- a/library.properties
+++ b/library.properties
@@ -3,7 +3,7 @@ version=0.0.20181230
 author=Junxiao Shi, Espressif Systems, Hristo Gochkov, Ibrahim Abdelkader
 maintainer=Junxiao Shi
 sentence=OV2640 camera on ESP32-CAM.
-paragraph=This library enables accessing OV2640 camera on AI Thinker ESP32-CAM module.
+paragraph=This library enables access to OV2640 camera on AI Thinker ESP32-CAM module.
 category=Sensors
 url=https://yoursunny.com
 architectures=esp32
