--- a/library.properties
+++ b/library.properties
@@ -1,6 +1,6 @@
 name=OV2640
-version=0.0.20181230
-author=Junxiao Shi, Espressif Systems, Hristo Gochkov, Ibrahim Abdelkader
+version=0.0.20190529
+author=Junxiao Shi, Espressif Systems
 maintainer=Junxiao Shi
 sentence=OV2640 camera on ESP32-CAM.
 paragraph=This library enables access to OV2640 camera on AI Thinker ESP32-CAM module.
