--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,33 +1,44 @@
 name: build
-on: [push, pull_request]
+on:
+  push:
+  pull_request:
+  workflow_dispatch:
 
 jobs:
   build:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-20.04
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
-        with:
-          python-version: "3.8"
-      - uses: arduino/setup-arduino-cli@v1.0.0
-      - name: install ESP32 Arduino Core
+      - uses: arduino/setup-arduino-cli@v1.1.1
+      - name: install Arduino cores and libraries
         run: |
           arduino-cli version
           arduino-cli core update-index --additional-urls $ARDUINO_CORE_URI
           arduino-cli core install esp32:esp32 --additional-urls $ARDUINO_CORE_URI
         env:
           ARDUINO_CORE_URI: https://raw.githubusercontent.com/espressif/arduino-esp32/gh-pages/package_esp32_index.json
-      - name: install esptool
+      - uses: actions/setup-python@v2
+        with:
+          python-version: '3.8'
+      - name: install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install esptool
-      - name: link library
-        run: |
-          mkdir -p $HOME/Arduino/libraries
-          ln -s $GITHUB_WORKSPACE $HOME/Arduino/libraries/esp32cam
-      - name: compile examples
-        run: |
-          arduino-cli compile -b esp32:esp32:esp32wrover ./examples/WifiCam
+      - uses: actions/checkout@v2
       - name: check code style
         run: |
-          bash mk/format-code.sh && [[ $(git status --porcelain | tee /dev/stderr | wc -l) -eq 0 ]]
+          mk/format-code.sh
+          [[ $(git status --porcelain | tee >(cat 1>&2) | wc -l) -eq 0 ]]
+      - name: link library
+        run: |
+          mkdir -p $HOME/Arduino/libraries/ODROID-GO
+          cd $HOME/Arduino/libraries
+          ln -s $GITHUB_WORKSPACE esp32cam
+          curl -sfL https://github.com/hardkernel/ODROID-GO/archive/${ODROIDGO_VERSION}.tar.gz | tar -C ODROID-GO -xz --strip-components=1
+        env:
+          ODROIDGO_VERSION: master
+      - name: compile WifiCam example
+        run: |
+          arduino-cli compile -b esp32:esp32:esp32wrover ./examples/WifiCam
+      - name: compile GoDisplay example
+        run: |
+          arduino-cli compile -b esp32:esp32:odroid_esp32 ./examples/GoDisplay
