--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,36 +18,36 @@ jobs:
           ARDUINO_CORE_URI: https://raw.githubusercontent.com/espressif/arduino-esp32/gh-pages/package_esp32_index.json
       - uses: actions/setup-python@v2
         with:
-          python-version: '3.8'
+          python-version: '3.9'
       - name: install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install esptool
+          sudo apt-get install -y clang-format-11 doxygen
       - uses: actions/checkout@v2
       - name: check code style
         run: |
           mk/format-code.sh
-          [[ $(git status --porcelain | tee >(cat 1>&2) | wc -l) -eq 0 ]]
+          git diff --exit-code
       - name: link library
         run: |
           mkdir -p $HOME/Arduino/libraries/ODROID-GO
           cd $HOME/Arduino/libraries
           ln -s $GITHUB_WORKSPACE esp32cam
-          curl -sfL https://github.com/hardkernel/ODROID-GO/archive/${ODROIDGO_VERSION}.tar.gz | tar -C ODROID-GO -xz --strip-components=1
+          # curl -sfL https://github.com/hardkernel/ODROID-GO/archive/${ODROIDGO_VERSION}.tar.gz | tar -C ODROID-GO -xz --strip-components=1
         env:
           ODROIDGO_VERSION: master
       - name: compile WifiCam example
         run: |
           arduino-cli compile -b esp32:esp32:esp32wrover ./examples/WifiCam
-      - name: compile GoDisplay example
-        run: |
-          arduino-cli compile -b esp32:esp32:odroid_esp32 ./examples/GoDisplay
+      # - name: compile GoDisplay example
+      #   run: |
+      #     arduino-cli compile -b esp32:esp32:odroid_esp32 ./examples/GoDisplay
+      #   disabled due to https://github.com/hardkernel/ODROID-GO/issues/24
       - name: build docs
-        run: |
-          sudo apt-get install doxygen
-          docs/build.sh
+        run: docs/build.sh
       - name: deploy docs
-        uses: South-Paw/action-netlify-deploy@v1.2.0
+        uses: South-Paw/action-netlify-deploy@v1.2.1
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           netlify-auth-token: ${{ secrets.NETLIFY_AUTH_TOKEN }}
