ci: upgrade to Actions v3

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,35 +8,31 @@ jobs:
   build:
     runs-on: ubuntu-20.04
     steps:
-      - uses: arduino/setup-arduino-cli@v1.1.1
+      - uses: arduino/setup-arduino-cli@v1
       - id: cores
-        name: refresh Arduino cores
+        name: Refresh Arduino cores
         run: |
           echo 'https://espressif.github.io/arduino-esp32/package_esp32_index.json' >~/arduino-cores.txt
           arduino-cli version
           arduino-cli update --additional-urls "$(<~/arduino-cores.txt)"
           echo ::set-output name=d::$(sha256sum ~/.arduino15/package_*index.json | sha256sum | cut -d' ' -f1)
-      - name: cache Arduino cores
-        uses: actions/cache@v2
+      - name: Cache Arduino cores
+        uses: actions/cache@v3
         with:
           path: ~/.arduino15/staging/packages
           key: cores-${{ steps.cores.outputs.d }}
-      - name: install Arduino cores
+      - name: Install Arduino cores
         run: |
           arduino-cli core install esp32:esp32 --additional-urls "$(<~/arduino-cores.txt)"
-      - uses: actions/setup-python@v2
-        with:
-          python-version: '3.9'
-      - name: install dependencies
+      - name: Install dependencies
         run: |
-          pip install esptool
           sudo apt-get install -y --no-install-recommends clang-format-11 doxygen
-      - uses: actions/checkout@v2
-      - name: check code style
+      - uses: actions/checkout@v3
+      - name: Check code style
         run: |
           mk/format-code.sh
           git diff --exit-code
-      - name: prepare Arduino libraries
+      - name: Prepare Arduino libraries
         run: |
           mkdir -p $HOME/Arduino/libraries
           cd $HOME/Arduino/libraries
@@ -52,14 +48,14 @@ jobs:
           ASYNCTCP_VERSION: ca8ac5f919d02bea07b474531981ddbfd64de97c
           ESPASYNCWEBSERVER_VERSION: 1d46269cedf477661ca8a29518414f4b74e957d4
           ODROIDGO_VERSION: 4a496e337d16bca4ddedbeca3486d7b60662d017
-      - name: compile examples
+      - name: Compile examples
         run: |
           arduino-cli compile -b esp32:esp32:esp32wrover ./examples/WifiCam
           arduino-cli compile -b esp32:esp32:esp32wrover ./examples/AsyncCam
           arduino-cli compile -b esp32:esp32:odroid_esp32 ./examples/GoDisplay
-      - name: build docs
+      - name: Build docs
         run: docs/build.sh
-      - name: deploy docs
+      - name: Deploy docs
         uses: South-Paw/action-netlify-deploy@v1.2.1
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
