--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
           arduino-cli update --additional-urls "$(<~/arduino-cores.txt)"
           echo d=$(sha256sum ~/.arduino15/package_*index.json | sha256sum | cut -d' ' -f1) >> $GITHUB_OUTPUT
       - name: Cache Arduino cores
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         with:
           path: ~/.arduino15/staging/packages
           key: cores-${{ steps.cores.outputs.d }}
@@ -37,22 +37,18 @@ jobs:
           mkdir -p $HOME/Arduino/libraries
           cd $HOME/Arduino/libraries
           ln -s $GITHUB_WORKSPACE esp32cam
-          mkdir -p AsyncTCP ESPAsyncWebServer ODROID-GO
+          mkdir -p AsyncTCP ESPAsyncWebServer
           curl -fsLS https://github.com/me-no-dev/AsyncTCP/archive/${ASYNCTCP_VERSION}.tar.gz \
             | tar -C AsyncTCP -xz --strip-components=1
           curl -fsLS https://github.com/me-no-dev/ESPAsyncWebServer/archive/${ESPASYNCWEBSERVER_VERSION}.tar.gz \
             | tar -C ESPAsyncWebServer -xz --strip-components=1
-          curl -fsLS https://github.com/hardkernel/ODROID-GO/archive/${ODROIDGO_VERSION}.tar.gz \
-            | tar -C ODROID-GO -xz --strip-components=1 --wildcards '*/library.properties' '*/src/odroid_go.*' '*/src/Fonts' '*/src/utility'
         env:
           ASYNCTCP_VERSION: ca8ac5f919d02bea07b474531981ddbfd64de97c
           ESPASYNCWEBSERVER_VERSION: 1d46269cedf477661ca8a29518414f4b74e957d4
-          ODROIDGO_VERSION: 4a496e337d16bca4ddedbeca3486d7b60662d017
       - name: Compile examples
         run: |
           arduino-cli compile -b esp32:esp32:esp32cam ./examples/WifiCam
           arduino-cli compile -b esp32:esp32:esp32cam ./examples/AsyncCam
-          arduino-cli compile -b esp32:esp32:odroid_esp32 ./examples/GoDisplay
       - name: Build docs
         run: docs/build.sh
       - name: Deploy docs
