--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=esp32cam
-version=0.0.20240626
+version=0.0.20250107
 author=Junxiao Shi
 maintainer=Junxiao Shi
 sentence=OV2640 camera on ESP32-CAM.
-paragraph=This library enables access to OV2640 camera on AI Thinker ESP32-CAM module.
+paragraph=This library provides an object oriented API to use OV2640 camera on ESP32 microcontroller.
 category=Sensors
-url=https://yoursunny.com
+url=https://esp32cam.yoursunny.dev/
 architectures=esp32
